--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "keywords": ["console", "progress", "bar"],
   "homepage": "https://github.com/kas-cor/console-progress-bar",
   "license": "MIT",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "authors": [
     {
       "name": "kas-cor",
@@ -13,7 +13,8 @@
     }
   ],
   "require": {
-    "php": ">=7.2.0"
+    "php": ">=7.2.0",
+    "composer-runtime-api": "^2.0"
   },
     "autoload": {
         "psr-4": {
