--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,19 @@
     "php": ">=7.2.0",
     "composer-runtime-api": "^2.0"
   },
-    "autoload": {
-        "psr-4": {
-            "KasCor\\": "src"
-        }
+  "require-dev": {
+    "phpstan/phpstan": "^1.10",
+    "friendsofphp/php-cs-fixer": "^3.13",
+    "phpunit/phpunit": "^9.5"
+  },
+  "autoload": {
+    "psr-4": {
+      "KasCor\\": "src"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "KasCor\\Tests\\": "tests"
+    }
+  }
 }
